--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <title>Month Master - Learn Months in 3 Languages</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -259,8 +260,8 @@
                     "Septembre", "Octobre", "Novembre", "Décembre"
                 ],
                 translations: {
-                    title: "Maître des Mois",
-                    introTitle: "Bienvenue dans Maître des Mois!",
+                    title: "Month Master",
+                    introTitle: "Bienvenue dans Month Master!",
                     introText: "Vous avez du mal à vous souvenir des numéros et des noms des mois? Ce quiz interactif vous aidera à maîtriser les mois en trois langues: anglais, français et arabe.",
                     numberToNameBtn: "Numéro vers Nom",
                     nameToNumberBtn: "Nom vers Numéro",
@@ -291,8 +292,8 @@
                     "سبتمبر", "أكتوبر", "نوفمبر", "ديسمبر"
                 ],
                 translations: {
-                    title: "خبير الشهر",
-                    introTitle: "مرحبًا بكم في سيد الشهر!",
+                    title: "Month Master",
+                    introTitle: "مرحبًا بكم في Month Master",
                     introText: "هل تجد صعوبة في تذكر أرقام وأسماء الشهور؟ سيساعدك هذا الاختبار العملي على إتقان الشهور بثلاث لغات: الإنجليزية والفرنسية والعربية.",
                     numberToNameBtn: "رقم إلى اسم",
                     nameToNumberBtn: "اسم إلى رقم",
